Add or update the App Service deployment workflow configuration from Azure Portal.

--- a/.github/workflows/master_cacheservertest.yml
+++ b/.github/workflows/master_cacheservertest.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_15ec2773a2744c5ba3cf0ac5327b5b62 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_8a468ce376c640ab890261629734e5c9 }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_66a61261377a404eb2628a72c0dd0d92 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_28417fde9ec44797b2f7e12f867c1650 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_15ec2773a2744c5ba3cf0ac5327b5b62 }}/nginx:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_66a61261377a404eb2628a72c0dd0d92 }}/migamscacheserver:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'cacheservertest'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_363de84fa0954d709f7ff94950065642 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_15ec2773a2744c5ba3cf0ac5327b5b62 }}/nginx:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_22dba1dd57414976a2df3f0e60fc554d }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_66a61261377a404eb2628a72c0dd0d92 }}/migamscacheserver:${{ github.sha }}'
